--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "next": "^12.1.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
